Add authorizor
Other bits that i have forgotten since last commit
